--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-super-grid": "^6.0.1",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-av": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
